[gd_scene load_steps=6 format=3 uid="uid://dxps1jt6c5hfa"]

[ext_resource type="Script" path="res://Scripts/World/mpworld.gd" id="1_3or80"]
[ext_resource type="PackedScene" uid="uid://dfdxx3sv8kr6x" path="res://tscn/World/Misc/directional_light_3d.tscn" id="1_ml5wy"]
[ext_resource type="Texture2D" uid="uid://cgkxhjohsrs7g" path="res://Textures/kenney_prototype-textures/PNG/Dark/texture_04.png" id="3_df3dq"]
[ext_resource type="PackedScene" uid="uid://cfbf65tvsn532" path="res://tscn/World/world_environment.tscn" id="3_seejv"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_eahi8"]
albedo_texture = ExtResource("3_df3dq")
roughness = 0.0
uv1_triplanar = true
uv1_world_triplanar = true

[node name="MpWorld" type="Node"]
script = ExtResource("1_3or80")

[node name="DirectionalLight3D" parent="." instance=ExtResource("1_ml5wy")]
light_energy = 1.0

[node name="WorldEnvironment" parent="." instance=ExtResource("3_seejv")]

[node name="Map" type="CSGCombiner3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -2.35302, 0)
snap = 1.0
use_collision = true

[node name="CSGBox3D" type="CSGBox3D" parent="Map"]
transform = Transform3D(0.999451, 0, 0, 0, 0.999451, 0, 0, 0, 0.999451, -2.99475, 0, 5.45874)
snap = 1.0
size = Vector3(21.512, 1, 20.5913)
material = SubResource("StandardMaterial3D_eahi8")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MainMenu" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 218.0
offset_top = 172.0
offset_right = -218.0
offset_bottom = -172.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/MainMenu"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/MainMenu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Multiplayer
 Menu
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Host" type="Button" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Host"

[node name="Join" type="Button" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Join
"

[node name="AdressEntry" type="LineEdit" parent="CanvasLayer/MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter Host Address Here"
alignment = 1

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://tscn/Player/player.tscn")
spawn_path = NodePath("..")

[connection signal="pressed" from="CanvasLayer/MainMenu/MarginContainer/VBoxContainer/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="CanvasLayer/MainMenu/MarginContainer/VBoxContainer/Join" to="." method="_on_join_pressed"]
